clusters/mharikmert.dev/default/infra-svg-server/infra-svg-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: infra-svg-server-svc
  name: infra-svg-server-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: infra-svg-server
  type: ClusterIP
