clusters/mharikmert.dev/default/infra-svg-server/infra-svg-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-svg-server-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: infra.mharikmert.dev
      http:
        paths:
          - backend:
              service:
                name: infra-svg-server-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
